--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,34 @@
 main {
-    border: 1px solid black;
-    width: 80%;
-    height: 500px;
+    width: 100%;
+    height: 100vh;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    background: linear-gradient(#87ceeb, #e0f6ff);
 }
 
-.pipe img {
+.pipe {
     position: absolute;
     bottom: 0;
     width: 80px;
     animation: pipe-movement 2s infinite linear;
+}
+
+.mario {
+    width: 150px;
+    position: absolute;
+    bottom: 0;
+
+}
+
+.jump {
+    animation: mario-jump 0.5s ease-out;
+}
+
+.clouds {
+    position: absolute;
+    width: 500px;
+    animation: clouds-movement 10s infinite linear;
 }
 
 @keyframes pipe-movement {
@@ -19,6 +36,38 @@ main {
         right: -80px;
     }
 
+    to {
+        right: 100%;
+    }
+}
+
+@keyframes mario-jump {
+    0% {
+        bottom: 0;
+    }
+
+    40% {
+        bottom: 180px;
+    }
+
+    50% {
+        bottom: 180px;
+    }
+
+    60% {
+        bottom: 180px;
+    }
+
+    100% {
+        bottom: 0;
+    }
+}
+
+@keyframes clouds-movement {
+    from {
+        right: -500px;
+    }
+    
     to {
         right: 100%;
     }
